# splitlab

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.txt
legacy/: gui_matplotlib_old.py
scripts/: bootstrap_pyenv.sh  dev_run.sh  migrate_from_gui_punch.sh
src/splitlab/: __init__.py  __main__.py  app.py
src/splitlab/core/: data_manager.py  dedispersion.py  label_store.py  pulse_table.py  utils.py
src/splitlab/ui/: main_window.py
tests/: test_smoke.py
